# simplify

./: .gitignore  LICENSE.md  README.md  README.rst  appveyor.yml  contributors_guide.md  environment-gpu.yml  environment.yml  gitignore  ml_environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  travis.yml
.spyproject/: workspace.ini
conda.recipe/: meta.yaml
data/: data.csv
examples/: __init__.py  cancer_df.csv  cancer_settings.ini  classification_cancer.py  tempCodeRunnerFile.py
ml_funnel/: data.py  filer.py  funnel.py  logit_encode.py  methods.py  plot.py  plotter.py  results.py  settings.py  test_tube.py
settings/: ml_funnel_settings.ini  settings.ini  simplify_settings.ini
simple_filer/: filer.py
simple_ml/: cookbook.py  custom.py  data.py  encoder.py  evaluator.py  interactor.py  model.py  plotter.py  recipe.py  results.py  sampler.py  scaler.py  selector.py  splicer.py  splitter.py  step.py
simple_settings/: settings.py
simplify/: __init__.py  __main__.py  almanac.py  analyst.py  animator.py  author.py  book.py  codex.py  cookbook.py  countertop.py  critic.py  custom.py  data.py  dataset.py  decorators.py  depot.py  encoder.py  evaluator.py  filer.py  files.py  idea.py  ingredients.py  interactor.py  inventory.py  menu.py  model.py  monograph.py  painter.py  planner.py  plotter.py  project.py  recipe.py  results.py  retool.py  sampler.py  scaler.py  scholar.py  selector.py  settings.py  splicer.py  (+7 more)
source/: data.py  logit_encode.py
tests/: idea_settings.ini  tempCodeRunnerFile.py  test_dataset.py  test_idea.py  test_inventory.py  (+4 more)
(+451 files in other folders)
