[tool.poetry]
name = "simplify"
version = "0.1.0"
description = "data science made simple"
authors = ["corey rayburn yung <coreyrayburnyung@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
pandas = "^1.1.5"
scipy = "^1.5.4"
matplotlib = "^3.3.3"
plotly = "^4.14.1"
joblib = "^1.1.1"
seaborn = "^0.11.0"
scikit-learn = "^0.23.2"
category-encoders = "^2.2.2"
eli5 = "^0.10.1"
statsmodels = "^0.12.1"
imbalanced-learn = "^0.7.0"
mlxtend = "^0.18.0"
xgboost = "^1.3.0"
scikit-optimize = "^0.8.1"
sympy = "^1.7"
yellowbrick = "^1.2"
sourdough = { git = "https://github.com/WithPrecedent/sourdough/" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
